recursion.lessons.recursion.tree.Tree.scala.error
Tree:16: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:30: error: expected start of definition
	override def run() {
                 ^Tree:34: error: Unmatched closing brace '}' ignored here
}
^